# nano-optax

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  index.md  schedulers.md  solvers.md
examples/: gd_vanilla.py  prox_gd_example.py  sgd_example.py  test_flexible_args.py
schedulers/: index.html
search/: search_index.json
solvers/: index.html
src/nano_optax/: __init__.py  apgd.py  base.py  gd.py  prox_gd.py  schedulers.py  sgd.py  types.py
tests/: conftest.py  test_apgd.py  test_gd.py  test_jit_solver.py  test_prox_gd.py  test_sgd.py
