[project]
name = "nano-optax"
version = "0.1.0"
description = "Basic optimizers in JAX"
readme = "README.md"
authors = [
    { name = "clijo", email = "52968726+clijo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.8.2",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
    "ruff>=0.14.13",
]
