[project]
name = "nano-optax"
version = "0.1.0"
description = "Basic optimizers in JAX"
readme = "README.md"
authors = [
    { name = "clijo", email = "52968726+clijo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.8.2",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jaxopt>=0.8.5",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.13",
]

[tool.ty.src]
exclude = ["src/nano_optax/sgd.py", "src/nano_optax/prox_gd.py"]
